<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_close"
            android:tint="@color/flush" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add_a_property"
        android:textColor="@color/mine"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_address"
        style="@style/Widget.Poplar.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:hint="@string/address"
        android:inputType="textPostalAddress|textCapWords"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_bedrooms"
        style="@style/Widget.Poplar.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:digits="0123456789"
        android:hint="@string/bedrooms"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/text_bathrooms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_address" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_bathrooms"
        style="@style/Widget.Poplar.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:digits="0123456789"
        android:hint="@string/bathrooms"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_bedrooms"
        app:layout_constraintTop_toBottomOf="@id/text_address" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_rent"
        style="@style/Widget.Poplar.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/rent"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/text_bedrooms" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/rect_flush_corner_4"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_rent" />

</androidx.constraintlayout.widget.ConstraintLayout>